[package]
name = "prometheus-http-api-rs"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"

[dependencies]
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = {version = "0.14", features = ["client", "http1"]}
hyper-tls = "0.5"
http = "0.2"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.1"
thiserror = "1.0"
tracing = "0.1.22"
tracing-subscriber = "0.3"
