[package]
name = "prometheus-http-api"
description = "API to interact with Prometheus HTTP API"
version = "0.2.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/sebosp/prometheus-http-api-rs"
license = "Apache-2.0"
keywords = ["prometheus"]
categories = ["web-programming::http-client"]

[dependencies]
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = {version = "0.14", features = ["client", "http1"]}
hyper-tls = "0.5"
http = "0.2"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.1"
thiserror = "1.0"
tracing = "0.1.22"
tracing-subscriber = "0.3"

[dev-dependencies]
env_logger = "0.9"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-log = { version = "0.1", features = ["env_logger"]}
